# scann

./: .gitignore  README.md  pyproject.toml
src/scann_impl/: __init__.py  anisotropic_kmeans.py  apq.py  main.py  pq.py
